# playground

./: .travis.yml  404.html  CMakeLists.txt  LICENSE.txt  README.md  appveyor.yml  dir_0db1952fde8700f6c369f5a92d5a8ee8.html  dir_2195dec42aed13c440b4eea86e9c5401.html  dir_237b12134b470b434e5d37eea8241c6e.html  dir_38a4a8892578592577b891d4bd0cdcea.html  feed.xml  files.html  files_dup.js  index.html  main.cpp  md__home_runner_work_playground_playground_docs_jekyll__c_o_d_e__o_f__c_o_n_d_u_c_t.html  md__home_runner_work_playground_playground_docs_jekyll__history.html  md__home_runner_work_playground_playground_docs_jekyll__r_e_a_d_m_e.html  md__home_runner_work_playground_playground_docs_overview.html  navtree.css  navtreedata.js  navtreeindex0.js  pages.html  test.cpp  test.h  test2.cpp  test_8h_source.html
.github/workflows/: cmake.yml  coverage.yml  docs.yml
2016/05/20/: my-example-post.html  welcome-to-jekyll.html
about/: index.html
docs/: CMakeLists.txt  Doxyfile.in  index.md
docs/jekyll/: _config.yml  index.markdown
docs/jekyll/_includes/: header.html
docs/jekyll/_posts/: 2020-11-29-welcome-to-jekyll.markdown
junk/2016/05/20/: this-post-demonstrates-post-content-styles.html
misc/2016/05/19/: super-short-article.html
misc/2016/05/20/: super-long-article.html
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  pages_0.js  pages_1.js  pages_2.js  pages_3.js  pages_4.js  searchdata.js
tests/: trivial.cpp
